<resources>
    <string name="app_name">eRegatta</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_list">Regattas</string>
    <string name="regatta_name">Regatta name</string>
    <string name="venue">Venue</string>
    <string name="country">Country</string>
    <string name="discipline">Discipline</string>
    <string name="type">Type</string>
    <string name="class1">Class</string>
    <string name="grade">Grade</string>
    <string name="month">Month</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="refreshWeather">Refresh Weather</string>
    <string name="contact_info">Contact &amp; info</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="date">Date</string>
    <string name="booking_com">Booking.com</string>
    <string name="booking_info">avg. price (3*, 2 persons)</string>
    <string name="location_not_found">Sorry, weather location unavailable.</string>
    <string name="celsiumMin">Min °C</string>
    <string name="celsiumMax">Max °C</string>
    <string name="kt">kt</string>
    <string name="degree">°</string>
    <string-array name="discipline_array">
        <item></item>
        <item>Match racing</item>
        <item>Fleet racing</item>
        <item>Team racing</item>
        <item>Offshore</item>
        <item>Oceanic</item>
        <item>Radio controlled</item>
        <item>Windsurfing</item>
        <item>Kiteboarding</item>
    </string-array>
    <string-array name="type_array">
        <item></item>
        <item>Open</item>
        <item>Men</item>
        <item>Women</item>
        <item>Youth</item>
        <item>Disabled</item>
        <item>Mixed</item>
    </string-array>
    <string-array name="class_array">
        <item></item>
        <item>12 Metre</item>
        <item>2.4 Metre</item>
        <item>29er</item>
        <item>29er XX</item>
        <item>420</item>
        <item>470</item>
        <item>49er</item>
        <item>49erFX</item>
        <item>5.5 Metre</item>
        <item>505</item>
        <item>6 Metre</item>
        <item>8 Metre</item>
        <item>A-Catamaran</item>
        <item>B14</item>
        <item>Byte</item>
        <item>Cadet</item>
        <item>Class 40</item>
        <item>Contender</item>
        <item>Dart 18</item>
        <item>Dragon</item>
        <item>Emperical Handicap (Unspecified)</item>
        <item>Enterprise</item>
        <item>Etchells</item>
        <item>Europe</item>
        <item>Farr 30</item>
        <item>Farr 40</item>
        <item>Finn</item>
        <item>Fireball</item>
        <item>Flying Dutchman</item>
        <item>Flying Fifteen</item>
        <item>Flying Junior</item>
        <item>Formula 16</item>
        <item>Formula 18</item>
        <item>Formula Experience</item>
        <item>Formula Windsurfing</item>
        <item>Funboard</item>
        <item>GP14</item>
        <item>H-Boat</item>
        <item>Hansa 2.3</item>
        <item>Hansa 303</item>
        <item>Hansa Liberty</item>
        <item>Hobie 14</item>
        <item>Hobie 16</item>
        <item>Hobie 17</item>
        <item>Hobie 18</item>
        <item>Hobie Dragoon</item>
        <item>Hobie Tiger</item>
        <item>Hobie Wildcat</item>
        <item>IMA (International Maxi Association)</item>
        <item>IMA - Maxi Fleet</item>
        <item>IMA - Mini Maxi Fleet</item>
        <item>IMA - Supermaxi Fleet</item>
        <item>IMS</item>
        <item>International 14</item>
        <item>International One Design (IOD)</item>
        <item>IRC </item>
        <item>IRSA (International Radio Sailing Association)</item>
        <item>IRSA - A Class</item>
        <item>IRSA - Marblehead</item>
        <item>IRSA - One Metre (IOM)</item>
        <item>IRSA - Ten Rater</item>
        <item>J/111</item>
        <item>J/22</item>
        <item>J/24</item>
        <item>J/80</item>
        <item>Kiteboarding (IKA)</item>
        <item>Kona</item>
        <item>Laser</item>
        <item>Laser 4.7</item>
        <item>Laser II</item>
        <item>Laser Radial</item>
        <item>Laser Vago</item>
        <item>Lightning</item>
        <item>Melges 20</item>
        <item>Melges 24</item>
        <item>Melges 32</item>
        <item>Micro</item>
        <item>Mirror</item>
        <item>Mistral</item>
        <item>Moth</item>
        <item>Musto Performance Skiff</item>
        <item>Nacra 17</item>
        <item>Nacra Infusion</item>
        <item>O\'pen BIC</item>
        <item>OK Dinghy</item>
        <item>Open 50 Monohull</item>
        <item>Open 60 Monohull</item>
        <item>Optimist</item>
        <item>ORC Club</item>
        <item>Platu 25</item>
        <item>Raceboard</item>
        <item>RC 44</item>
        <item>RS 500</item>
        <item>RS Feva </item>
        <item>RS Tera</item>
        <item>RS100</item>
        <item>RS:One</item>
        <item>RS:X</item>
        <item>SB20</item>
        <item>Shark</item>
        <item>Sirena SL16</item>
        <item>Snipe</item>
        <item>Soling</item>
        <item>Sonar</item>
        <item>Soto 40</item>
        <item>Speed Windsurfing</item>
        <item>Splash</item>
        <item>Star</item>
        <item>Sunfish</item>
        <item>Swan 45</item>
        <item>Swan 60</item>
        <item>Tasar</item>
        <item>Techno 293</item>
        <item>Tempest</item>
        <item>Topcat K1</item>
        <item>Topper</item>
        <item>Tornado</item>
        <item>TP52 </item>
        <item>Vaurien</item>
        <item>Viper</item>
        <item>X-35</item>
        <item>X-41</item>
        <item>X99</item>
        <item>Yngling</item>
        <item>Zoom 8</item>
    </string-array>
    <string-array name="grade_array">
        <item></item>
        <item>1</item>
        <item>100</item>
        <item>2</item>
        <item>200</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>50</item>
        <item>C1</item>
        <item>C2</item>
        <item>W</item>
    </string-array>
</resources>